--- a/licensing-service/pom.xml
+++ b/licensing-service/pom.xml
@@ -11,10 +11,13 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<packaging>jar</packaging>
 	<name>EagleEye Licensing Service</name>
 	<description>Licensing Service</description>
-
+	
 	<properties>
     	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
+		<start-class>com.thoughtmechanix.licenses.Application</start-class>
+	    <docker.image.name>arturodl/tmx-licensing-service</docker.image.name>
+		<docker.image.tag>chapterSix</docker.image.tag>				
 	</properties>
 	
 	<parent>
@@ -92,6 +95,46 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<build>
 		<plugins>
+			<!-- We use the Resources plugin to filer Dockerfile and run.sh, it inserts actual JAR filename -->
+	         <!-- The final Dockerfile will be created in target/dockerfile/Dockerfile -->
+	         <plugin>
+	             <artifactId>maven-resources-plugin</artifactId>
+	             <executions>
+	                 <execution>
+	                     <id>copy-resources</id>
+	                     <!-- here the phase you need -->
+	                     <phase>validate</phase>
+	                     <goals>
+	                         <goal>copy-resources</goal>
+	                     </goals>
+	                     <configuration>
+	                         <outputDirectory>${basedir}/target/dockerfile</outputDirectory>
+	                         <resources>
+	                             <resource>
+	                                 <directory>src/main/docker</directory>
+	                                 <filtering>true</filtering>
+	                             </resource>
+	                         </resources>
+	                     </configuration>
+	                 </execution>
+	             </executions>
+	        </plugin>
+	        <plugin>
+	             <groupId>com.spotify</groupId>
+	             <artifactId>docker-maven-plugin</artifactId>
+	             <version>0.4.10</version>
+	             <configuration>
+	                 <imageName>${docker.image.name}:${docker.image.tag}</imageName>
+	                 <dockerDirectory>${basedir}/target/dockerfile</dockerDirectory>
+	                 <resources>
+	                     <resource>
+	                         <targetPath>/</targetPath>
+	                         <directory>${project.build.directory}</directory>
+	                         <include>${project.build.finalName}.jar</include>
+	                     </resource>
+	                 </resources>
+	             </configuration>
+			</plugin>																						  
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
