--- a/licensing-service/src/main/resources/application.yml
+++ b/licensing-service/src/main/resources/application.yml
@@ -6,3 +6,18 @@
 #    fetchRegistry: true
 #    serviceUrl:
 #      defaultZone: http://localhost:8761/eureka/
+security:
+  oauth2:
+    resource:
+      userInfoUri: http://localhost:8901/auth/user
+#Setting logging levels
+logging:
+  level:
+    com.netflix: WARN
+    org.springframework.web: WARN
+    com.thoughtmechanix: DEBUG
+# hystrix:
+#   shareSecurityContext: true
+# feign:
+#   hystrix:
+#     enabled: true
