--- a/licensing-service/pom.xml
+++ b/licensing-service/pom.xml
@@ -97,6 +97,11 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		</dependency>
 
 		<dependency>
+	      <groupId>org.springframework.security</groupId>
+	      <artifactId>spring-security-jwt</artifactId>
+	    </dependency>
+
+		<dependency>
 			<groupId>postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>9.1-901.jdbc4</version>
