--- a/licensing-service/src/main/resources/application.yml
+++ b/licensing-service/src/main/resources/application.yml
@@ -6,10 +6,10 @@
 #    fetchRegistry: true
 #    serviceUrl:
 #      defaultZone: http://localhost:8761/eureka/
-security:
-  oauth2:
-    resource:
-      userInfoUri: http://localhost:8901/auth/user
+# security:
+#  oauth2:
+#    resource:
+#      userInfoUri: http://localhost:8901/auth/user
 #Setting logging levels
 logging:
   level:
