--- a/zuulserver/pom.xml
+++ b/zuulserver/pom.xml
@@ -45,6 +45,12 @@
       <artifactId>spring-cloud-starter-eureka</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt</artifactId>
+      <version>0.7.0</version>
+    </dependency>
+
     <!--
     <dependency>
       <groupId>org.springframework.cloud</groupId>
