--- a/organization-service/src/main/resources/application.yml
+++ b/organization-service/src/main/resources/application.yml
@@ -7,6 +7,17 @@ spring:
   cloud:
    config:
      uri: http://localhost:8888
+   stream:
+      bindings:
+        output:
+            destination:  orgChangeTopic
+            content-type: application/json
+      kafka:
+        binder:
+          zkNodes: localhost
+          brokers: localhost
+
+
 eureka:
   instance:
     preferIpAddress: true
