--- a/authenticationserver/src/main/resources/bootstrap.yml
+++ b/authenticationserver/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@ spring:
     name: authenticationservice
   profiles:
     active:
-      default
+      dev
   cloud:
     config:
       enabled: true
