--- a/confserv/pom.xml
+++ b/confserv/pom.xml
@@ -34,8 +34,8 @@ maven.apache.org/xsd/maven-4.0.0.xsd">
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<start-class>com.thoughtmechanix.confsvr.ConfigServerApplication </start-class>
 		<java.version>1.8</java.version>
-		<docker.image.name>johncarnell/tmx-confsvr</docker.image.name>
-		<docker.image.tag>chapter3</docker.image.tag>
+		<docker.image.name>arturodl/bms-configserver</docker.image.name>
+		<docker.image.tag>develop</docker.image.tag>
 	</properties>
 
 	<dependencies>
@@ -49,4 +49,53 @@ maven.apache.org/xsd/maven-4.0.0.xsd">
 		</dependency>
 	</dependencies>
 	<!--Docker build Config Not Displayed -->
+
+	<build>
+		<plugins>
+			<!-- We use the Resources plugin to filer Dockerfile and run.sh, it inserts actual JAR filename -->
+	         <!-- The final Dockerfile will be created in target/dockerfile/Dockerfile -->
+	         <plugin>
+	             <artifactId>maven-resources-plugin</artifactId>
+	             <executions>
+	                 <execution>
+	                     <id>copy-resources</id>
+	                     <!-- here the phase you need -->
+	                     <phase>validate</phase>
+	                     <goals>
+	                         <goal>copy-resources</goal>
+	                     </goals>
+	                     <configuration>
+	                         <outputDirectory>${basedir}/target/dockerfile</outputDirectory>
+	                         <resources>
+	                             <resource>
+	                                 <directory>src/main/docker</directory>
+	                                 <filtering>true</filtering>
+	                             </resource>
+	                         </resources>
+	                     </configuration>
+	                 </execution>
+	             </executions>
+	        </plugin>
+	        <plugin>
+	             <groupId>com.spotify</groupId>
+	             <artifactId>docker-maven-plugin</artifactId>
+	             <version>0.4.10</version>
+	             <configuration>
+	                 <imageName>${docker.image.name}:${docker.image.tag}</imageName>
+	                 <dockerDirectory>${basedir}/target/dockerfile</dockerDirectory>
+	                 <resources>
+	                     <resource>
+	                         <targetPath>/</targetPath>
+	                         <directory>${project.build.directory}</directory>
+	                         <include>${project.build.finalName}.jar</include>
+	                     </resource>
+	                 </resources>
+	             </configuration>
+			</plugin>																						  
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
