--- a/licensing-service/src/main/resources/bootstrap.yml
+++ b/licensing-service/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@ spring:
     name: licensingservice
   profiles:
     active:
-      default
+      dev
   cloud:
     config:
       uri: http://localhost:8888
@@ -15,4 +15,4 @@ spring:
           group: licensingGroup
         binder:
           zkNodes: localhost
-          brokers: localhost
+          brokers: localhost 
