fixing some problems on run.sh files and adding new parent pom

--- a/confserv/src/main/docker/Dockerfile
+++ b/confserv/src/main/docker/Dockerfile
@@ -11,6 +11,7 @@ ADD  @project.build.finalName@.jar /usr/local/configserver/
 ADD run.sh run.sh
 RUN chmod +x run.sh
 EXPOSE 8888
-ENTRYPOINT ["sh", "/run.sh"]
-#CMD ["./run.sh"]
+ENV EUREKASERVER_PORT=8761
+#ENTRYPOINT ["sh", "/run.sh"]
+CMD ["./run.sh"]
 
