--- a/organization-service/src/main/docker/Dockerfile
+++ b/organization-service/src/main/docker/Dockerfile
@@ -14,6 +14,7 @@ ENV KAFKASERVER_URI=kafkaserver
 ENV ZKSERVER_URI=kafkaserver
 ENV EUREKASERVER_PORT=8761
 ENV CONFIGSERVER_PORT=8888
+ENV LICENSINGSERVICE_PORT=8090
 ENV DATABASESERVER_PORT=5432
 ENV ZUULSERVER_PORT=5555
 ENV KAFKASERVER_PORT=2181
