--- a/zuulserver/src/main/docker/Dockerfile
+++ b/zuulserver/src/main/docker/Dockerfile
@@ -12,5 +12,7 @@ ENV CONFIGSERVER_URI=http://configserver:8888
 ENV EUREKASERVER_URI=http://eurekaserver:8761/eureka/
 ENV EUREKASERVER_PORT=8761
 ENV CONFIGSERVER_PORT=8888
+ENV LICENSINGSERVICE_PORT=8090
+ENV ORGANIZATIONSERVICE_PORT=8080
 ENV ENCRYPT_KEY=IMSYMMETRIC
 ENTRYPOINT ["sh", "/run.sh"]
