--- a/authenticationserver/src/main/docker/Dockerfile
+++ b/authenticationserver/src/main/docker/Dockerfile
@@ -12,5 +12,6 @@ ENV CONFIGSERVER_URI=http://configserver:8888
 ENV EUREKASERVER_URI=http://eurekaserver:8761/eureka/
 ENV EUREKASERVER_PORT=8761
 ENV CONFIGSERVER_PORT=8888
+ENV ZUULSERVER_PORT=5555
 ENV ENCRYPT_KEY=IMSYMMETRIC
 ENTRYPOINT ["sh", "/run.sh"]
